@startuml DataModel

entity "User" {
  * id: number
  --
  timeZone: string
}

entity "ScheduleJob" {
  id: number
  --
  guildId: number
  channelId: number
  ownerId: number
  --
  remindDate: Date;
  cronRule: string;
  --
  reminderString: string;
  isBotCommand: boolean
  --
  **@BelongsToMany**
  mentionUsers: User[]
}

User "0..n" -- "0..n" ScheduleJob : is reminded by >
User "1..1" -- "0..n" ScheduleJob : owns >
@enduml